<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterUserActivity">

    <TextView
        android:id="@+id/title_Activity_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="211dp"
        android:layout_marginBottom="665dp"
        android:text="@string/title_Activity_Register"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="344dp"
        android:layout_height="521dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="132dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/activity_register_et_password_confirmation"
            android:layout_width="308dp"
            android:layout_height="41dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/activity_register_et_password_confirmation"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="464dp" />

        <TextView
            android:id="@+id/activity_register_tv_password_confirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_register_tv_password_confirmation"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="438dp" />

        <TextView
            android:id="@+id/activity_register_tv_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="481dp"
            android:text="@string/activity_register_tv_lastname"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_register_et_lastname"
            android:layout_width="310dp"
            android:layout_height="47dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="122dp"
            android:layout_marginBottom="352dp"
            android:hint="hint"
            android:text="@string/activity_register_et_lastname"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/activity_register_tv_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="99dp"
            android:layout_marginBottom="398dp"
            android:text="@string/activity_register_tv_firstname"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="309dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="434dp"
            android:hint="hint"
            android:text="@string/activity_register_et_firstname"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_register_et_mail"
            android:layout_width="311dp"
            android:layout_height="48dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="208dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="266dp"
            android:hint="hint"
            android:text="@string/activity_register_et_mail"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/activity_register_tv_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="185dp"
            android:layout_marginBottom="312dp"
            android:text="@string/activity_register_tv_mail"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/activity_register_tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="271dp"
            android:layout_marginBottom="226dp"
            android:text="@string/activity_register_tv_phone"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/activity_register_et_phone"
            android:layout_width="312dp"
            android:layout_height="45dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="302dp"
            android:layout_marginBottom="174dp"
            android:ems="10"
            android:inputType="number"
            android:text="@string/activity_register_et_phone"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/activity_register_tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_register_tv_password"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="362dp" />

        <EditText
            android:id="@+id/activity_register_et_password"
            android:layout_width="308dp"
            android:layout_height="41dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/activity_register_et_password"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="388dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/activity_register_btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="658dp"
        android:layout_marginBottom="20dp"
        android:text="@string/activity_register_btn_create"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/activity_register_chk_terms_and_policy"
        android:layout_width="342dp"
        android:layout_height="41dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="606dp"
        android:layout_marginBottom="84dp"
        android:text="@string/activity_register_chk_terms_and_policy"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>