<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity"><TextView
    android:id="@+id/title_Login"
    android:layout_width="165dp"
    android:layout_height="28dp"
    android:layout_marginStart="4dp"
    android:layout_marginTop="168dp"
    android:layout_marginEnd="201dp"
    android:layout_marginBottom="512dp"
    android:gravity="fill_vertical"
    android:includeFontPadding="false"
    android:text="@string/title_Login"
    android:textAlignment="textStart"
    android:textAppearance="@style/TextAppearance.AppCompat.Large"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.6" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_Login"
        android:layout_width="374dp"
        android:layout_height="278dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="229dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="208dp"
        android:background="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_Create_Account"
            android:layout_width="133dp"
            android:layout_height="19dp"
            android:layout_marginStart="212dp"
            android:layout_marginBottom="39dp"
            android:text="@string/title_Create_Account"
            android:textColor="#7F3131"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/title_Forgot_Password"
            android:layout_width="133dp"
            android:layout_height="19dp"
            android:layout_marginStart="212dp"
            android:layout_marginBottom="66dp"
            android:text="@string/title_Forgot_Password"
            android:textColor="#7F3131"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="243dp"
            android:layout_height="48dp"
            android:layout_marginStart="123dp"
            android:layout_marginTop="93dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="137dp"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textAlignment="textStart"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/activity_register_et_lastname"
            android:layout_width="242dp"
            android:layout_height="49dp"
            android:layout_marginStart="126dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="214dp"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textAlignment="textStart"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_Password"
            android:layout_width="111dp"
            android:layout_height="39dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="92dp"
            android:layout_marginBottom="147dp"
            android:gravity="fill_vertical"
            android:includeFontPadding="false"
            android:text="@string/title_Password"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_Mail"
            android:layout_width="111dp"
            android:layout_height="39dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="258dp"
            android:layout_marginBottom="222dp"
            android:gravity="fill_vertical"
            android:includeFontPadding="false"
            android:text="@string/title_Mail"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/login"
            android:layout_width="157dp"
            android:layout_height="53dp"
            android:layout_gravity="start"
            android:layout_marginStart="29dp"
            android:layout_marginEnd="188dp"
            android:layout_marginBottom="36dp"
            android:enabled="false"
            android:text="@string/action_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="#000000" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>